src/frameworks/enterprise/main/objects/ExceptionLog__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <description>Provides additional context for the exception error that occurred</description>
    <inlineHelpText>Provides additional context for the exception error that occurred</inlineHelpText>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>