src/frameworks/enterprise/main/objects/ExceptionLog__c/fields/isHandled__c.field-meta.xml
<CustomField>
    <fullName>isHandled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To define whether the Exception logged is a Handled Exception or Unhandled Exception.</description>
    <label>Is Handled</label>
    <type>Checkbox</type>
</CustomField>