src/frameworks/enterprise/main/objects/ExceptionLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>The name of the consumer method where the exception is caught and is using the logging service.</description>
    <label>Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>