src/frameworks/enterprise/main/objects/ExceptionLog__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <description>15 char organization Id per environment such as the sandbox.</description>
    <label>Organization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>