src/frameworks/enterprise/main/objects/ExceptionLog__c/fields/WSCallingApplication__c.field-meta.xml
<CustomField>
    <fullName>WSCallingApplication__c</fullName>
    <description>Running user which threw the exception (from the web service itself).</description>
    <label>WS CallingApplication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>