src/frameworks/enterprise/main/objects/ExceptionLog__c/listViews/Fill_inbox_V_D.listView-meta.xml
<ListView>
    <fullName>Fill_inbox_V_D</fullName>
    <columns>NAME</columns>
    <columns>ExceptionDetails__c</columns>
    <columns>NumberOfTimesOccured__c</columns>
    <columns>ExceptionLogTimestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>contains</operation>
        <value>fill</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <label>Fill inbox - V&amp;D</label>
    <language>en_US</language>
</ListView>