src/frameworks/enterprise/main/objects/ExceptionLog__c/listViews/myview.listView-meta.xml
<ListView>
    <fullName>myview</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>ExceptionDetails__c</columns>
    <columns>ExceptionLogTimestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Application Sales</label>
    <language>en_US</language>
</ListView>